@@ -1,3 +1,7 @@
+Sat Dec 27 15:07:26 2003  Dave Thomas  <dave@pragprog.com>
+
+	* object.c: Add RDoc comments for Symbol class.
+
 Sat Dec 27 14:39:53 2003  Dave Thomas  <dave@pragprog.com>
 
 	* numeric.c (Init_Numeric): Add RDoc comments.
